# cube-sim-cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: cmake-multi-platform.yml  cmake-windows.yml
assets/: goobinator.m3d  optimus.glb  optimus.m3d
src/: App.cpp  App.hpp  BeeModel.cpp  BeeModel.hpp  Game.cpp  Game.hpp  Gameplay.cpp  Gameplay.hpp  app.cpp  app.h  audio.cpp  audio.h  game.cpp  game.h  gameplay.cpp  gameplay.h  main.cpp  mainmenustate.cpp  mainmenustate.h  screens.cpp  screens.h
